--- a/final.ipynb
+++ b/final.ipynb
@@ -289,7 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We iterate through every row of the dataframe and use rows with years in the `date` column to determine the year for the following rows. For rows with months in the `date` column, we use the currently set year to determine the date. To make plotting the data with `matplotlib` easier, we parse the date as a string and store it as an integer representing seconds. Now, we have tidy data that can be easily plot,\n",
+    "We iterate through every row of the dataframe and use rows with years in the `date` column to determine the year for the following rows. For rows with months in the `date` column, we use the currently set year to determine the date. To make plotting the data with `matplotlib` easier, we parse the date as a string and store it as an integer representing seconds. Now, we have tidy data that can be easily plotted.\n",
     "\n",
     "Let's look at the trend in coffee prices over time."
    ]
@@ -1023,7 +1023,7 @@
     "\n",
     "### Production Data\n",
     "\n",
-    "The ICO collects data on coffee production from its member countries. Specifically, we'll look at the Domestic Consumption and Exportable production datasets. These represent the amount of coffee consumed domestically by producing countries and the amount of coffee available for export, repsectively. Together, they add up to the total production of a producing country for a given year. All units represent thousands of 60kg bags of green coffee.\n",
+    "The ICO collects data on coffee production from its member countries. Specifically, we'll look at the Domestic Consumption and Exportable Production datasets. These represent the amount of coffee consumed domestically by producing countries and the amount of coffee available for export, repsectively. Together, they add up to the total production of a producing country for a given year. All units represent thousands of 60kg bags of green coffee.\n",
     "\n",
     "Both datasets have the same format, so we can use the same cleaning procedure on both."
    ]
@@ -1244,7 +1244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We want to transform the data so that every row represents an observation of the quantity produced by a country for a given year. Unlike the prices to growers dataset, each column contains a year range rather than a single year. This is due to how the harvest and growing cycle aligns with the new year. Note that different countries also harvest at different times of the year (and some more than once! - Counter Culture Coffee has a great interactive map to see when harvests occur in each county: https://counterculturecoffee.com/learn/resource-center/coffee-seasonality). We'll also want to remove all of the rows that are group-level aggregates."
+    "We want to transform the data so that every row represents an observation of the quantity produced by a country for a given year. Unlike the prices to growers dataset, each column contains a year range rather than a single year. This is due to how the harvest and growing cycle aligns with the calendar year. Note that different countries also harvest at different times of the year (and some more than once! - Counter Culture Coffee has a great interactive map to see when harvests occur in each county: https://counterculturecoffee.com/learn/resource-center/coffee-seasonality). We'll also want to remove all of the rows that are group-level aggregates."
    ]
   },
   {
@@ -1273,7 +1273,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Nice! Now let's read in the domestic production dataset:"
+    "Nice! Now let's read in the domestic consumption dataset:"
    ]
   },
   {
@@ -1621,7 +1621,7 @@
    "source": [
     "Global coffee production has nearly doubled since 1990. The continuous upward trend in production contrasts the graph of coffee market prices, which showed signicant volatility and no clear trend toward higher prices.\n",
     "\n",
-    "At this point, we have the `indicator_prices`, `prices_to_growers`, and `production` datasets. Now, let's use the `indicator_prices` and `production` to estimate prices to growers.\n",
+    "At this point, we have the `indicator_prices`, `prices_to_growers`, and `production` datasets. Now, let's use `indicator_prices` and `production` to estimate prices to growers.\n",
     "\n",
     "## Analysis\n",
     "\n",
@@ -1631,7 +1631,8 @@
     "\n",
     "$$PricetoGrowers = ProducerGroup + MarketPrice + DomesticRatio$$\n",
     "\n",
-    "Where `ProducerGroup` is the primary group of coffee that a country produces, `MarketPrice` is the market price for the primary kind of coffee that a country produces, and `DomesticRatio` is the ratio of domestic production to total production of a country. For linear regression, we will have to transform each of the producer groups into a separate binary variable, and market price into an interaction term between each binary producer group variable and its associated market price. The fully specified linear regression equation will have the form:\n",
+    "Where `ProducerGroup` is the primary group of coffee that a country produces, `MarketPrice` is the market price for the primary kind of coffee that a country produces, and `DomesticRatio` is the ratio of domestic consumption to total production of a country. For linear regression, we will have to transform each of the producer groups into a separate binary variable, and market price into an interaction term between each binary producer group variable and its associated market price. The fully specified linear regression equation will have the form:\n",
+    "\n",
     "\n",
     "$$PricetoGrowers = β_1*IsColombianMild + β_2*IsOtherMild + β_3*IsBrazilianNatural + β_4*IsRobusta + β_5*IsColombianMild*ColombianMild + β_6*IsOtherMild*OtherMild B_7*IsBrazilianNatural*BrazilianNatural + β_8*IsRobusta*Robusta + β_9*DomesticRatio$$\n",
     "\n",
@@ -2215,7 +2216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From output, we see that our model obtained a moderate R<sup>2</sup> of .39. All of the coefficients on the independent variables were statistically significant with the expection of the binary variables for colombian milds, brazilian naturals, and robustas. Let's visualize the results of the model."
+    "From the output, we see that our model obtained a moderate R<sup>2</sup> of .39. All of the coefficients on the independent variables were statistically significant with the expection of the binary variables for colombian milds, brazilian naturals, and robustas. Let's visualize the results of the model."
    ]
   },
   {
@@ -2254,7 +2255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the graph comparing actual and predicted prices to growers, it seems that the models tend to underestimate the price to growers at higher prices. This could be due to the fact that there were significantly less data with very high prices to growers. Another strategy we can use to understand the model is to plot the residuals (the difference between actual and predicted values) vs. an independent ratio. As an example, let's plot residuals against the ratio of dometic consumption to total production."
+    "From the graph comparing actual and predicted prices to growers, it seems that the model tends to underestimate the price to growers at higher prices. This could be due to the fact that there were significantly less data with very high prices to growers. Another strategy we can use to understand the model is to plot the residuals (the difference between actual and predicted values) vs. an independent variable. As an example, let's plot residuals against the ratio of dometic consumption to total production."
    ]
   },
   {
@@ -2419,7 +2420,7 @@
     "\n",
     "## Final Thoughts\n",
     "\n",
-    "Clearly, there are many complex factors affecting the farmgate price paid to coffee growers, many of which are likely not contained in the data collected by the ICO. While it's intuitive that the market price of coffee should affect the amount that growers are paid, the importance of the ratio of domestic consumption to production is not as clear. It's possible that countries that consume more of the coffee they produce share commonalities in terms of wage structure and worker compensation. Or, growers may be able to sell directly to in-country coffee roasters rather than working with large, multinational coffee exporters that need to guarantee a profit."
+    "Clearly, there are many complex factors affecting the farmgate price paid to coffee growers, many of which are not contained in the data collected by the ICO. While it's intuitive that the market price of coffee should affect the amount that growers are paid, the importance of the ratio of domestic consumption to production is not as clear. It's possible that countries that consume more of the coffee they produce share commonalities in terms of wage structure and worker compensation. Or, growers may be able to sell directly to in-country coffee roasters rather than working with large, multinational coffee exporters that need to guarantee a profit."
    ]
   }
  ],
